# project

./: .env.example  .gitignore  README.md  __init__.py  pyproject.toml
agent/: __init__.py
cli/: __init__.py
config/: __init__.py
database/: __init__.py
tests/: test_config.py  test_database.py
tools/: __init__.py
vector_store/: index.faiss  index.pkl
