[project]
name = "ship-hull-agent"
version = "0.1.0"
description = "船弦号识别 Agent — 精确匹配 + 语义检索"
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.3.0",
    "numpy>=1.24",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
ship-hull = "cli.main:app"

[tool.setuptools.packages.find]
include = ["config*", "database*", "tools*", "agent*", "cli*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
